--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <main>
         <section>
             <h2>Привет!</h2>
-            <p>Меня зовут Артём Капотин, я студент группы ВБ-351 Московского колледжа транспорта.</p>
-            <p>На этом сайте вы найдете информацию о моей производственной практике, курсовой работе, достижениях и контактах.</p>
+            <p>Я Артём Капотин, студент группы ВБ-351 Московского колледжа транспорта.</p>
+            <p>На этом сайте вы найдете информацию о том как проходила моя производственной практика, курсовая работе о моих достижениях и контактах.</p>
         </section>
 
         <section>
