--- a/archiv.html
+++ b/archiv.html
@@ -21,10 +21,25 @@
     </header>
 
     <main class="site-main">
-
         <section>
             <h2>Сертификаты и дипломы</h2>
-
+            <div class="certificate">
+                <img src="sert1.jpg" alt="Правовой диктант">
+                <p>Правовой диктант</p>
+            </div>
+            <div class="certificate">
+                <img src="sert2.jpg" alt="Всероссийский экономический диктант">
+                <p>Всероссийский экономический диктант</p>
+            </div>
+            <div class="certificate">
+                <img src="sert4.jpg" alt="Курсы SQL">
+                <p>Курсы SQL</p>
+            </div>
+            <div class="certificate">
+                <img src="sert5.jpg" alt="Веб разработка HTML и CSS">
+                <p>Веб разработка HTML и CSS</p>
+            </div>
+        </section>
     </main>
 
     
