--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
 
         <section class="contact-card college">
             <h2>Московский колледж транспорта</h2>
-            <p><strong>Адрес:</strong> г. Москва, Ленинградский просп., д. 15</p>
-            <p><strong>Телефон:</strong> +7 (495) 765-34-00</p>
+            <p><strong>Адрес:</strong> г. Москва, ст.м. "Алексеевская", ж/д станция "Москва-3"</p>
+            <p><strong>Телефон:</strong> +7 (495) 687-64-31</p>
             <p><strong>Сайт:</strong> <a href="https://mkgt.ru " target="_blank">mkt.moscow</a></p>
         </section>
 
@@ -48,8 +48,7 @@
         <section class="map-section">
             <h3>Как нас найти?</h3>
             <div class="map">
-                <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                    src="https://maps.google.com/maps?q=Москва,+Ленинградский+проспект,+д.15&amp;z=15&amp;ie=UTF8&amp;iwloc=&amp;output=embed"></iframe>
+               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2242.380362307!2d37.63630325081021!3d55.80399677373492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b535e5f50ca8db%3A0x4775ab204b113421!2z0JzQvtGB0LrQvtCy0YHQutC40Lkg0LrQvtC70LvQtdC00LYg0YLRgNCw0L3RgdC_0L7RgNGC0LA!5e0!3m2!1sru!2sru!4v1751256672086!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
 
